--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   lottie: ^2.6.0
   flutter_tts: ^3.8.3
   speech_to_text: ^6.3.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
