--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.0.4 <4.0.0'
 
 dependencies:
   flutter:
@@ -20,6 +20,7 @@ dependencies:
   lottie: ^2.6.0
   flutter_tts: ^3.8.3
   speech_to_text: ^6.3.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
