--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,26 @@ flutter:
     - assets/icons/dd/
     - assets/icons/e/
     - assets/icons/ee/
+    - assets/icons/g/
+    - assets/icons/h/
+    - assets/icons/i/
+    - assets/icons/k/
+    - assets/icons/l/
+    - assets/icons/m/
+    - assets/icons/n/
+    - assets/icons/o/
+    - assets/icons/oo/
+    - assets/icons/ow/
+    - assets/icons/p/
+    - assets/icons/q/
+    - assets/icons/r/
+    - assets/icons/s/
+    - assets/icons/t/
+    - assets/icons/u/
+    - assets/icons/uw/
+    - assets/icons/v/
+    - assets/icons/x/
+    - assets/icons/y/
     - assets/images/
 
   fonts:
